plugins/kotlin/idea/tests/testData/multiplatform/diamondSeesTwoActuals/top/top.kt
package sample

expect class <!LINE_MARKER("descr='Has actuals in [left, right] module'")!>A<!> {
    fun <!LINE_MARKER("descr='Has actuals in [left, right] module'")!>foo<!>(): Int
}
